--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Platform Jump</title>
         <link rel="stylesheet" href="platform-jump.css">
-        <script src="platform-jump.js"></script>
+        <script type="module" src="platform-jump.js"></script>
+        <script type="module" src="board.js"></script>
+        <script type="module" src="bunny.js"></script>
+        <script type="module" src="platforms.js"></script>
+        <script type="module" src="game.js"></script>
     </head>
     <body>
         <canvas id="board"></canvas>
